# langchain-slackbot

./: .env.dev  .env.local  .gitignore  .tool-versions  Dockerfile  Dockerfile.api  LICENSE  Pipfile  README.md  README_en.md  docker-compose.yml  pyproject.toml
src/: ai_engine.py  chatbot_engine.py  gradio_app.py  langchain_main.py  langchain_tools.py  langchain_vector.py  router.py  slack_app.py
src/vector_file/: sample.txt
