[tool.poetry]
name = "udemy-langchain"
version = "0.1.0"
description = ""
authors = ["t-yasui <yasutai12@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11.3"
gradio = "3.31.0"
pydantic = "1.10.7"
python-dotenv = "1.0.0"
langchain = "0.0.172"
openai = "0.27.6"
unstructured = "0.6.6"
tabulate = "0.9.0"
pdf2image = "1.16.3"
pytesseract = "0.3.10"
chromadb = "0.3.23"
tiktoken = "0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
